@@ -28,6 +28,8 @@ Any correction, hardening pass, or follow-up change is recorded in a newer chang
 - `safe-run` now flags unmanaged pre-existing output files anywhere under out-root as deterministic orphan-evidence warnings.
 - Analysis is not blocked by these checks; warning codes are recorded in `operator_receipt.json` (`SAFE_RUN_EVIDENCE_*`).
 - Added explicit smoke-test coverage for root-level stale output detection under the same non-blocking warning model.
+- `safe-run` output now stages/finalizes (`<out>.stage` -> `<out>`), replacing stale out-roots and preventing partial safe-run output residue from appearing as finalized evidence.
+- `safe-run` staged finalize preserves deterministic stale-output signaling by carrying `SAFE_RUN_EVIDENCE_ORPHAN_OUTPUT` when unmanaged pre-existing out-root files were present before write.
 - `operator_receipt.json` now carries additive digest links for `weftend/README.txt` and run sub-receipts (`analysis/*`, `host/*`) for stronger evidence-chain traceability.
 - `safe-run` now writes `analysis/capability_ledger_v0.json` for raw-input adapter lanes, recording deterministic requested/granted/denied adapter and plugin capability decisions.
 - `container scan` now writes the same deterministic `analysis/capability_ledger_v0.json` artifact in success and fail-closed paths for consistent container capability evidence.
